--- a/.config
+++ b/.config
@@ -96,6 +96,8 @@ CONFIG_USES_ROOTFS_PART=y
 CONFIG_USES_BOOT_PART=y
 CONFIG_mipsel=y
 CONFIG_ARCH="mipsel"
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
+CONFIG_TARGET_INITRAMFS_COMPRESSION_LZMA=y
 CONFIG_EXTERNAL_CPIO=""
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
@@ -169,10 +171,7 @@ CONFIG_KERNEL_NET_L3_MASTER_DEV=y
 CONFIG_KERNEL_PAGE_POOL=y
 CONFIG_KERNEL_MPTCP=y
 CONFIG_KERNEL_MPTCP_IPV6=y
-CONFIG_KERNEL_EROFS_FS=y
 CONFIG_KERNEL_EROFS_FS_XATTR=y
-CONFIG_KERNEL_EROFS_FS_ZIP=y
-CONFIG_KERNEL_EROFS_FS_ZIP_LZMA=y
 CONFIG_USE_FS_ACL_ATTR=y
 CONFIG_KERNEL_FS_POSIX_ACL=y
 CONFIG_KERNEL_BTRFS_FS_POSIX_ACL=y
@@ -250,6 +249,8 @@ CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_qmodem=y
+CONFIG_FEED_oldpackages=y
+CONFIG_FEED_custom=y
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_busybox=y
@@ -609,6 +610,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_ndisc6=y
 CONFIG_PACKAGE_rdisc6=y
+CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-arc4=y
 CONFIG_PACKAGE_kmod-crypto-authenc=y
@@ -630,6 +632,7 @@ CONFIG_PACKAGE_kmod-crypto-sha1=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-user=y
 CONFIG_PACKAGE_kmod-cryptodev=y
+CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
 CONFIG_PACKAGE_kmod-hwmon-core=y
@@ -637,7 +640,14 @@ CONFIG_PACKAGE_kmod-leds-gpio=y
 CONFIG_PACKAGE_kmod-asn1-decoder=y
 CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
+CONFIG_PACKAGE_kmod-lib-crc32c=y
+CONFIG_PACKAGE_kmod-lib-lzo=y
+CONFIG_PACKAGE_kmod-lib-raid6=y
 CONFIG_PACKAGE_kmod-lib-textsearch=y
+CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
+CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
+CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
@@ -715,7 +725,6 @@ CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT=""
 CONFIG_GOLANG_BUILD_CACHE_DIR=""
 CONFIG_PACKAGE_lua=y
 CONFIG_LUA_ECO_WOLFSSL=y
-CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_NODEJS_12=y
 CONFIG_RUST_SCCACHE_DIR=""
 CONFIG_PACKAGE_ucode=y
@@ -726,10 +735,23 @@ CONFIG_PACKAGE_ucode-mod-rtnl=y
 CONFIG_PACKAGE_ucode-mod-ubus=y
 CONFIG_PACKAGE_ucode-mod-uci=y
 CONFIG_PACKAGE_ucode-mod-uloop=y
+CONFIG_PACKAGE_libbz2=y
+CONFIG_PACKAGE_libsqlite3=y
+CONFIG_SQLITE3_COLUMN_METADATA=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libxtables=y
+CONFIG_PACKAGE_qt5-core=y
+CONFIG_PACKAGE_qt5-network=y
+CONFIG_PACKAGE_qt5-sql=y
+CONFIG_PACKAGE_qt5-xml=y
 CONFIG_QT5_INCLUDE_ATOMIC=y
 CONFIG_PACKAGE_libgnutls=y
 CONFIG_GNUTLS_DTLS_SRTP=y
@@ -771,11 +793,21 @@ CONFIG_WOLFSSL_HAS_WPAS=y
 CONFIG_WOLFSSL_HAS_ECC25519=y
 CONFIG_WOLFSSL_HAS_OPENVPN=y
 CONFIG_WOLFSSL_ALT_NAMES=y
+CONFIG_PACKAGE_boost=y
+CONFIG_boost-compile-visibility-hidden=y
+CONFIG_boost-static-and-shared-libs=y
+CONFIG_boost-runtime-shared=y
+CONFIG_boost-variant-release=y
+CONFIG_PACKAGE_boost-chrono=y
+CONFIG_PACKAGE_boost-random=y
+CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_libavahi-client=y
 CONFIG_PACKAGE_libavahi-dbus-support=y
+CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libblobmsg-json=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_FILE=y
@@ -790,9 +822,16 @@ CONFIG_PACKAGE_libdaemon=y
 CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libevdev=y
+CONFIG_PACKAGE_libevent2=y
+CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libexpat=y
+CONFIG_PACKAGE_libext2fs=y
+CONFIG_PACKAGE_libffmpeg-audio-dec=y
+CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libgmp=y
+CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libiwinfo=y
+CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libjson-c=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
@@ -801,14 +840,20 @@ CONFIG_PACKAGE_liblucihttp-ucode=y
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libmnl=y
+CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libnl-tiny=y
+CONFIG_PACKAGE_libogg=y
+CONFIG_PACKAGE_libparted=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpcre2-16=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libsmartcols=y
+CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libtasn1=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libubox=y
@@ -822,7 +867,9 @@ CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_rblibtorrent=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_terminfo=y
@@ -838,22 +885,23 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
-CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-#CONFIG_PACKAGE_luci-app-lucky=n
+CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-msd_lite=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
-CONFIG_PACKAGE_iptables-mod-extra=y
-CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
-CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_luci-app-package-manager=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-qmodem=y
 CONFIG_PACKAGE_luci-app-qmodem_INCLUDE_vendor-qmi-wwan=y
 CONFIG_PACKAGE_luci-app-qmodem_USE_TOM_CUSTOMIZED_QUECTEL_CM=y
@@ -863,64 +911,67 @@ CONFIG_PACKAGE_luci-app-qmodem-ttl=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
 CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-xupnpd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-design=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-lib-base=y
+CONFIG_PACKAGE_luci-lib-chartjs=y
 CONFIG_PACKAGE_luci-lib-ip=y
-CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
+CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
-CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filebrowser-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-lucky-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-msd_lite-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qmodem-mwan-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qmodem-sms-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qmodem-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-xupnpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
-CONFIG_PACKAGE_xupnpd=y
+CONFIG_PACKAGE_minidlna=y
+CONFIG_PACKAGE_qbittorrent=y
+CONFIG_PACKAGE_transmission-cli=y
+CONFIG_PACKAGE_transmission-daemon=y
+CONFIG_PACKAGE_transmission-remote=y
+CONFIG_PACKAGE_transmission-web-control=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_vsftpd-alt=n
-CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+CONFIG_PACKAGE_vsftpd=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_ddns-scripts=y
@@ -950,9 +1001,9 @@ CONFIG_DRIVER_11AC_SUPPORT=y
 CONFIG_WPA_MBO_SUPPORT=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_etherwake=y
+CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_libipset=y
-#CONFIG_PACKAGE_lucky=n
 CONFIG_PACKAGE_msd_lite=y
 CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_odhcp6c=y
@@ -969,7 +1020,13 @@ CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_VFS=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_vlmcsd=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PARTED_READLINE=y
 CONFIG_PACKAGE_attr=y
+CONFIG_PACKAGE_btrfs-progs=y
+CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_bc=y
 CONFIG_PACKAGE_coremark=y
@@ -979,7 +1036,6 @@ CONFIG_COREMARK_NUMBER_OF_THREADS=8
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-stat=y
 CONFIG_PACKAGE_dbus=y
-CONFIG_PACKAGE_filebrowser=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_jshn=y
@@ -988,6 +1044,7 @@ CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_qmodem=y
 CONFIG_PACKAGE_quectel-CM-5G-M=y
 CONFIG_PACKAGE_shellsync=y
+CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_sms-forwarder=y
 CONFIG_PACKAGE_sms-tool_q=y
 CONFIG_STRACE_NONE=y
@@ -999,58 +1056,3 @@ CONFIG_PACKAGE_ubus-at-daemon=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_usbutils=y
-CONFIG_TARGET_IMAGES=y
-CONFIG_TARGET_ROOTFS_INCLUDE_KERNEL=y
-CONFIG_TARGET_ROOTFS_INCLUDE_UIMAGE=y
-CONFIG_TARGET_ROOTFS_INCLUDE_ZIMAGE=y
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_UBI=y
-CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_jdcloud_re-sp-01b_SYSUPGRADE=y
-CONFIG_PACKAGE_kmod-mtd-rw=y
-CONFIG_PACKAGE_kmod-mtdram=y
-CONFIG_PACKAGE_kmod-nand=y
-CONFIG_PACKAGE_kmod-nand-raw=y
-CONFIG_TARGET_IMAGES_PAD=y
-CONFIG_IMAGEOPT=y
-CONFIG_COMBINED_IMAGE=y
-CONFIG_PACKAGE_mkf2fs=y
-CONFIG_PACKAGE_f2fsck=y
-CONFIG_PACKAGE_f2fs-tools=y
-CONFIG_PACKAGE_libf2fs=y
-CONFIG_SIGNED_PACKAGES=y
-CONFIG_SIGNATURE_CHECK=y
-CONFIG_TARGET_ROOTFS_INCLUDE_DTB=y
-CONFIG_TARGET_ROOTFS_INCLUDE_FIT=y
-CONFIG_DEVICE_JDCLOUD_RE-SP-01B=y
-CONFIG_JDCLOUD_RE-SP-01B_DEVICE_TITLE="JDCloud RE-SP-01B"
-CONFIG_JDCLOUD_RE-SP-01B_DEVICE_PACKAGES="kmod-mt7603 kmod-mt7615e kmod-mt7615-firmware kmod-usb3 kmod-usb2"
-CONFIG_PACKAGE_samba4-server=y
-CONFIG_PACKAGE_samba4-client=y
-CONFIG_PACKAGE_samba4-libs=y
-CONFIG_PACKAGE_samba4-utils=y
-CONFIG_PACKAGE_samba4-net=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_kmod-fs-cifs=y
-CONFIG_PACKAGE_openvpn-openssl=y
-CONFIG_PACKAGE_luci-app-openvpn=y
-CONFIG_PACKAGE_openvpn-easy-rsa=y
-CONFIG_PACKAGE_openvpn-openssl-utils=y
-CONFIG_PACKAGE_luci-app-modem-data=y
-CONFIG_PACKAGE_luci-app-qmodem=y
-CONFIG_PACKAGE_tom_modem=y
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_kmod-usb-serial-wwan=y
-CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
-CONFIG_PACKAGE_uqmi=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
-CONFIG_PACKAGE_mbim-utils=y
-CONFIG_PACKAGE_comgt=y
-CONFIG_PACKAGE_usb-modeswitch=y
-CONFIG_PACKAGE_usb-modeswitch-data=y
