--- a/.github/workflows/fudy.yml
+++ b/.github/workflows/fudy.yml
@@ -31,6 +31,12 @@ jobs:
     timeout-minutes: 480
 
     steps:
+    # 第一步必须检出代码！
+    - name: 检出仓库代码
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # 获取所有历史和文件
+
     - name: 检查仓库文件
       run: |
         echo "=== 检查仓库文件 ==="
@@ -39,6 +45,14 @@ jobs:
         echo "隐藏文件检查:"
         ls -la .config 2>/dev/null && echo "✅ 找到 .config 文件" || echo "❌ 未找到 .config 文件"
         ls -la feed.conf.default 2>/dev/null && echo "✅ 找到 feed.conf.default 文件" || echo "❌ 未找到 feed.conf.default 文件"
+        
+        # 显示文件内容（前几行）
+        echo ""
+        echo "=== .config 文件预览（前5行）==="
+        head -5 .config 2>/dev/null || echo "无法读取 .config 文件"
+        echo ""
+        echo "=== feed.conf.default 文件预览（前5行）==="
+        head -5 feed.conf.default 2>/dev/null || echo "无法读取 feed.conf.default 文件"
 
     - name: 初始化环境（极致空间优化）
       run: |
@@ -91,44 +105,41 @@ jobs:
       run: |
         echo "=== 配置文件检查 ==="
         
+        # 再次检查文件是否存在
+        echo "当前目录: $(pwd)"
+        echo "目录内容:"
+        ls -la
+        
         # 检查 .config 文件
         if [ ! -f ".config" ]; then
-          echo "❌ 错误：仓库根目录缺少 .config 文件"
-          echo "请确保已将 .config 文件上传到仓库根目录"
-          echo "当前目录内容："
-          ls -la
+          echo "❌ 致命错误：没有找到 .config 文件"
+          echo "当前目录绝对路径: $(pwd)"
+          echo "查找.config文件:"
+          find . -name ".config" -type f 2>/dev/null || echo "未找到"
           exit 1
         fi
         
         echo "✅ 找到 .config 文件"
         echo "文件大小: $(ls -lh .config | awk '{print $5}')"
+        echo "文件位置: $(pwd)/.config"
         echo ""
         
         # 检查 feed.conf.default 文件
         if [ ! -f "feed.conf.default" ]; then
-          echo "⚠️ 警告：未找到 feed.conf.default 文件"
-          echo "将使用 OpenWrt 默认的 feeds 配置"
+          echo "⚠️ 警告：未找到 feed.conf.default 文件，将使用默认配置"
         else
           echo "✅ 找到 feed.conf.default 文件"
           echo "文件大小: $(ls -lh feed.conf.default | awk '{print $5}')"
-          echo ""
-          echo "=== feed.conf.default 预览（前10行）==="
-          head -10 feed.conf.default
         fi
         
         echo ""
-        echo "=== .config 预览（前30行）==="
-        head -30 .config
-        
-        # 分析配置文件
-        echo ""
-        echo "=== 配置分析 ==="
-        TOTAL_PACKAGES=$(grep -c "^CONFIG_PACKAGE_" .config || true)
-        LUCI_PACKAGES=$(grep -c "^CONFIG_PACKAGE_luci" .config || true)
+        echo "=== .config 分析 ==="
+        TOTAL_PACKAGES=$(grep -c "^CONFIG_PACKAGE_" .config 2>/dev/null || echo "0")
         echo "总软件包数: $TOTAL_PACKAGES"
-        echo "Luci界面包数: $LUCI_PACKAGES"
         
-        if [ "$TOTAL_PACKAGES" -gt 200 ]; then
+        if [ "$TOTAL_PACKAGES" -eq 0 ]; then
+          echo "⚠️ 警告：.config 文件中未找到软件包配置"
+        elif [ "$TOTAL_PACKAGES" -gt 200 ]; then
           echo "⚠️ 警告：配置包含 $TOTAL_PACKAGES 个软件包，可能导致磁盘空间不足"
           echo "建议精简配置到150个以下"
         fi
@@ -175,7 +186,7 @@ jobs:
         # 删除旧目录（如果存在）
         rm -rf "$BUILD_DIR"
         
-        echo "开始克隆源码（深度1，单分支）..."
+        echo "开始克隆OpenWrt源码..."
         git clone --depth=1 --single-branch --branch master "$REPO_URL" "$BUILD_DIR"
         
         if [ $? -ne 0 ]; then
@@ -191,7 +202,7 @@ jobs:
         # 应用配置文件
         echo "应用配置文件..."
         cp "../.config" .config
-        echo "✅ .config 文件已复制"
+        echo "✅ .config 文件已复制到 $(pwd)/.config"
         
         # 应用 feed.conf.default（如果存在）
         if [ -f "../feed.conf.default" ]; then
@@ -201,16 +212,12 @@ jobs:
           echo "⚠️ 使用默认的 feeds 配置"
         fi
         
+        # 验证文件已复制
+        echo "验证文件:"
+        ls -la .config feed.conf.default 2>/dev/null || true
+        
         # 极简清理源码
         echo "执行极简源码清理..."
-        
-        # 删除所有文档和示例
-        find . -name "*.md" -o -name "*.txt" -o -name "*.rst" -o -name "*.doc*" -o -name "README*" -o -name "CHANGELOG*" 2>/dev/null | xargs rm -f 2>/dev/null || true
-        
-        # 删除测试文件
-        find . -type d -name "*test*" 2>/dev/null | head -20 | xargs rm -rf 2>/dev/null || true
-        
-        # 删除.git目录（节省空间）
         rm -rf .git
         
         echo "清理后大小: $(du -sh . | cut -f1)"
@@ -236,8 +243,6 @@ jobs:
               USAGE=$(df / --output=pcent | tail -1 | tr -d ' %')
               if [ "$USAGE" -gt 90 ]; then
                 echo "⚠️ 磁盘使用率 $USAGE%，清理旧下载..."
-                
-                # 按修改时间排序，删除最旧的10个文件
                 find "$CACHE_DIR/dl" -type f \( -name "*.tar.*" -o -name "*.zip" -o -name "*.gz" -o -name "*.bz2" \) 2>/dev/null | \
                   xargs ls -t 2>/dev/null | tail -10 | xargs rm -f 2>/dev/null || true
               fi
@@ -248,18 +253,13 @@ jobs:
           # 启动监控
           monitor_disk_space &
           MONITOR_PID=$!
-          
-          # 确保监控进程会被清理
           trap "kill $MONITOR_PID 2>/dev/null || true" EXIT
           
-          # 执行下载（使用更小的并发）
           echo "下载基础工具链..."
           make tools/download -j1 V=s || echo "工具链下载有警告"
           
-          # 停止监控
           kill $MONITOR_PID 2>/dev/null || true
           
-          # 下载后压缩文件节省空间
           echo "压缩下载文件以节省空间..."
           find "$CACHE_DIR/dl" -name "*.tar" -type f -exec gzip -f {} \; 2>/dev/null || true
         fi
@@ -295,31 +295,25 @@ jobs:
           
           case $level in
             1)
-              # 轻度回收：清理编译中间文件
               find . -name "*.o" -type f -delete 2>/dev/null || true
               ;;
             2)
-              # 中度回收：清理编译中间文件和暂存目录
               find . -name "*.o" -type f -delete 2>/dev/null || true
               find . -name "*.a" -type f -delete 2>/dev/null || true
               
-              # 清理下载缓存（保留最近20个）
               if [ -d "$CACHE_DIR/dl" ]; then
                 find "$CACHE_DIR/dl" -type f \( -name "*.tar.*" -o -name "*.zip" -o -name "*.gz" \) 2>/dev/null | \
                   xargs ls -t 2>/dev/null | tail -n +21 | xargs rm -f 2>/dev/null || true
               fi
               ;;
             3)
-              # 重度回收：全面清理
               find build_dir -type f \( -name "*.o" -o -name "*.a" -o -name "*.lo" \) -delete 2>/dev/null || true
               
-              # 清理下载缓存（保留最近10个）
               if [ -d "$CACHE_DIR/dl" ]; then
                 find "$CACHE_DIR/dl" -type f \( -name "*.tar.*" -o -name "*.zip" -o -name "*.gz" \) 2>/dev/null | \
                   xargs ls -t 2>/dev/null | tail -n +11 | xargs rm -f 2>/dev/null || true
               fi
               
-              # 清理/tmp
               sudo rm -rf /tmp/*
               ;;
           esac
@@ -358,11 +352,9 @@ jobs:
         # 启动监控
         start_disk_monitor &
         MONITOR_PID=$!
-        
-        # 确保监控进程会被清理
         trap "kill $MONITOR_PID 2>/dev/null || true" EXIT
         
-        # 编译步骤函数（带自动重试和空间检查）
+        # 编译步骤函数
         compile_with_retry() {
           local target=$1
           local max_retries=2
@@ -371,31 +363,24 @@ jobs:
           while [ $retry_count -lt $max_retries ]; do
             echo "编译 $target (尝试 $((retry_count+1))/$max_retries)"
             
-            # 编译前检查空间
             AVAIL=$(df / --output=avail | tail -1 | tr -d ' ')
-            if [ "$AVAIL" -lt 1048576 ]; then  # 小于1GB
+            if [ "$AVAIL" -lt 1048576 ]; then
               echo "编译前空间不足，执行清理..."
               reclaim_space 2
             fi
             
-            if make $target -j$THREADS 2>&1 | tee /tmp/compile.log; then
+            if make $target -j$THREADS; then
               echo "✅ $target 编译成功"
-              
-              # 编译成功后立即清理中间文件
-              echo "清理 $target 的中间文件..."
               find . -name "*.o" -type f -delete 2>/dev/null || true
-              
               return 0
             else
               retry_count=$((retry_count+1))
               echo "❌ $target 编译失败，重试 $retry_count/$max_retries"
-              
-              # 失败后清理更多空间
               reclaim_space 2
               
               if [ $retry_count -eq $max_retries ]; then
                 echo "尝试单线程编译..."
-                if make $target -j1 V=s 2>&1 | tee /tmp/compile_single.log; then
+                if make $target -j1 V=s; then
                   echo "✅ $target 单线程编译成功"
                   return 0
                 fi
@@ -409,25 +394,15 @@ jobs:
           return 1
         }
         
-        # 分步编译
         echo "开始智能分步编译..."
         
-        # 1. 编译工具链
+        # 分步编译
         compile_with_retry "tools/compile" || echo "⚠️ 工具链编译有问题，继续..."
-        
-        # 2. 编译目标工具链
         compile_with_retry "toolchain/compile" || echo "⚠️ 目标工具链编译有问题，继续..."
-        
-        # 3. 编译目标文件系统
         compile_with_retry "target/compile" || echo "⚠️ 目标文件系统编译有问题，继续..."
-        
-        # 4. 编译软件包
-        echo "编译软件包..."
         compile_with_retry "package/compile" || echo "⚠️ 软件包编译有问题，继续..."
         
-        # 停止监控
         kill $MONITOR_PID 2>/dev/null || true
-        wait $MONITOR_PID 2>/dev/null || true
         
         echo "✅ 分步编译完成"
 
@@ -440,29 +415,24 @@ jobs:
         echo "=== 最终编译前磁盘空间 ==="
         df -h
         
-        # 最终空间检查
         AVAIL=$(df / --output=avail | tail -1 | tr -d ' ')
-        if [ "$AVAIL" -lt 524288 ]; then  # 小于512MB
+        if [ "$AVAIL" -lt 524288 ]; then
           echo "🚨 最终编译前空间严重不足，执行紧急清理..."
-          
-          # 清理所有可能的中间文件
           find . -name "*.o" -type f -delete 2>/dev/null || true
           find . -name "*.a" -type f -delete 2>/dev/null || true
           
-          # 清理下载缓存（保留最近5个）
           if [ -d "$CACHE_DIR/dl" ]; then
             find "$CACHE_DIR/dl" -type f \( -name "*.tar.*" -o -name "*.zip" -o -name "*.gz" \) 2>/dev/null | \
               xargs ls -t 2>/dev/null | tail -n +6 | xargs rm -f 2>/dev/null || true
           fi
         fi
         
-        # 执行最终编译
         echo "执行make（最终步骤）..."
-        if make -j$THREADS 2>&1 | tee /tmp/final_make.log; then
+        if make -j$THREADS; then
           echo "🎉 最终编译成功！"
         else
           echo "❌ 最终编译失败，尝试单线程..."
-          if make -j1 V=s 2>&1 | tee /tmp/final_make_single.log; then
+          if make -j1 V=s; then
             echo "🎉 单线程最终编译成功！"
           else
             echo "❌ 最终编译失败"
@@ -481,7 +451,6 @@ jobs:
         
         echo "🔍 查找生成的固件..."
         
-        # 查找所有可能的固件文件
         FIRMWARE_FILES=$(find bin -type f \( -name "*.bin" -o -name "*.img" -o -name "*.gz" -o -name "*.trx" \) 2>/dev/null || true)
         
         if [ -n "$FIRMWARE_FILES" ]; then
@@ -489,25 +458,19 @@ jobs:
           echo "$FIRMWARE_FILES"
           echo ""
           
-          # 显示文件详情
           for file in $FIRMWARE_FILES; do
             if [ -f "$file" ]; then
               echo "📄 $file: $(ls -lh "$file" | awk '{print $5}')"
             fi
           done
           
-          # 统计总大小
           echo ""
           echo "📦 固件目录总大小:"
           du -sh bin/targets/* 2>/dev/null || du -sh bin/* 2>/dev/null || true
         else
           echo "❌ 未找到固件文件"
           echo "检查日志以确定编译失败原因"
-          
-          # 列出bin目录内容
-          echo "bin目录内容:"
           ls -la bin/ 2>/dev/null || true
-          
           exit 1
         fi
         
@@ -539,7 +502,6 @@ jobs:
           echo "🎊🎊🎊 编译成功完成！ 🎊🎊🎊"
           echo "================================="
           echo "📥 固件文件可在 Artifacts 区域下载"
-          echo "⏱️  总编译时间: 约 $(( ${{ job.duration }} / 60000 )) 分钟"
           echo "================================="
         else
           echo ""
@@ -551,8 +513,7 @@ jobs:
           echo "3. 网络问题 - 下载失败"
           echo ""
           echo "💡 解决方案："
-          echo "1. 减少.config中的软件包数量（特别是Luci相关包）"
-          echo "2. 使用'跳过下载'选项（如果之前成功过）"
-          echo "3. 确保.config和feed.conf.default文件正确"
+          echo "1. 减少.config中的软件包数量"
+          echo "2. 确保.config和feed.conf.default文件正确"
           echo "================================="
         fi
